# we-wayland-bridge

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
bridge/: .gitignore  CMakeLists.txt  README.md  build.sh  demo.sh
bridge/host/: main.cpp
docs/: MEMORY.md  session-01-build.md  session-04-live-wallpaper.md
docs/10_vision/: 10.01_project_vision.md  10.02_principles.md  10.03_non_goals.md
docs/20_architecture/: 20.01_tech_stack.md  20.02_directory_structure.md  20.03_component_map.md
docs/30_rendering/: 30.01_output_backends.md  30.02_next-v2-core-api.md
docs/40_bridge/: 40.01_producer.md  40.02_consumer.md  40.03_live_session_runbook.md  40.04_incident_2026-06-12_freeze.md  40.05_dmabuf_zerocopy.md
docs/50_build_and_run/: 50.01_system_requirements.md
docs/90_open_questions/: 90.01_open_questions.md
docs/90_upstream/: 302-context.md  comment-302-dmabuf-consumer.md  comment-pr609.md  q12-bug-report.md
docs/_adr/: ADR-0001-repository-strategy.md  ADR-0002-licensing.md  ADR-0003-output-backend.md  ADR-0004-frame-transport.md  ADR-template.md
docs/_meta/: pre-publish-code-audit.md  session-handoff.md  writing-style.md
extension/: LICENSE  README.md  extension.js  liveWallpaper.js  metadata.json
